--- a/package.json
+++ b/package.json
@@ -15,11 +15,11 @@
     "web-vitals": "^1.0.1"
   },
   "scripts": {
+    "setup": "yarn",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "setup": "yarn"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
